[gd_scene load_steps=9 format=3 uid="uid://bd0iyup1lv6yy"]

[ext_resource type="Script" path="res://scripts/environment/box_throwable.gd" id="1_ugajs"]
[ext_resource type="Texture2D" uid="uid://bxjy36n0fq4ar" path="res://assets/art/crate-light.png" id="2_e8qcv"]
[ext_resource type="Script" path="res://scripts/environment/throwable_component.gd" id="2_jttuy"]
[ext_resource type="AudioStream" uid="uid://bts2cvhbdvo5r" path="res://assets/audio/Box interactions/Land.wav" id="4_oxd14"]
[ext_resource type="AudioStream" uid="uid://c4fjmhckktxtt" path="res://assets/audio/Box interactions/Picking_up.wav" id="5_bbinh"]
[ext_resource type="AudioStream" uid="uid://bb0ncaiimtsqg" path="res://assets/audio/Box interactions/Throw.wav" id="6_6a6nc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gg4mw"]
size = Vector2(29, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iprci"]
size = Vector2(63, 23)

[node name="BoxThrowable" type="CharacterBody2D"]
script = ExtResource("1_ugajs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_gg4mw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_e8qcv")

[node name="ThrowableComponent" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("2_jttuy")
throw_force = 500
body = NodePath("..")
debug_mode = true

[node name="Area2DTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DTrigger"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_iprci")

[node name="land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_oxd14")

[node name="pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bbinh")

[node name="throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6a6nc")

[connection signal="body_entered" from="Area2DTrigger" to="." method="_on_area_2d_trigger_body_entered"]
[connection signal="body_exited" from="Area2DTrigger" to="." method="_on_area_2d_trigger_body_exited"]
